Updated the sortign logic
